<resources>
    <string name="app_name">GB_Calculator_Java</string>
    <string name="button_eq">=</string>
    <string name="button_dot">.</string>
    <string name="button_0">0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_plus">+</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_minus">-</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_multi">x</string>
    <string name="button_ac">AC</string>
    <string name="button_del">C</string>
    <string name="button_brackets">()</string>
    <string name="button_div">/</string>
    <string name="math_image">Math image</string>
    <string name="change_app_theme">Change app theme:</string>
    <string name="green_style">Green style</string>
    <string name="blue_style">Blue style</string>
    <string name="orange_style">Orange style</string>
    <string name="save">Save</string>
</resources>