<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThemeActivity">

    <TextView
        android:id="@+id/text_change_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_app_theme"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.3"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_height"
        app:layout_constraintTop_toBottomOf="@+id/text_change_theme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/radio_green_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/green_style" />

        <RadioButton
            android:id="@+id/radio_blue_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blue_style" />

        <RadioButton
            android:id="@+id/radio_orange_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/orange_style" />

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:cornerRadius="@dimen/button_corner_radius"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        android:layout_marginBottom="@dimen/button_height"/>
</androidx.constraintlayout.widget.ConstraintLayout>