<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".Calculator">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="160dp"
        android:layout_height="160dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/math1"
        android:contentDescription="@string/math_image" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/result"
        android:textAlignment="viewEnd"
        android:textSize="@dimen/result_number_size"
        app:layout_constraintBottom_toTopOf="@+id/enter_numbers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/enter_numbers"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:autofillHints=""
        android:text="@string/enter_numbers"
        android:textAlignment="viewEnd"
        android:textSize="@dimen/enter_number_size"
        app:layout_constraintBottom_toTopOf="@+id/button_ac"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <Button
        android:id="@+id/button_0"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/button_0"
        android:textColor="@color/colorDayTextPlain"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button_1"
        app:layout_constraintStart_toStartOf="@+id/button_1"
        app:layout_constraintTop_toBottomOf="@+id/button_1" />

    <Button
        android:id="@+id/button_dot"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/button_dot"
        android:textColor="@color/colorDayTextPlain"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/button_0"
        app:layout_constraintEnd_toEndOf="@+id/button_2"
        app:layout_constraintStart_toStartOf="@+id/button_2"
        app:layout_constraintTop_toTopOf="@+id/button_0"/>

    <Button
        android:id="@+id/button_eq"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/button_eq"
        android:textColor="@color/colorDayTextPlain"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/button_dot"
        app:layout_constraintEnd_toEndOf="@+id/button_plus"
        app:layout_constraintStart_toStartOf="@+id/button_3"
        app:layout_constraintTop_toTopOf="@+id/button_dot" />

    <Button
        android:id="@+id/button_1"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/button_1"
        android:textColor="@color/colorDayTextPlain"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@+id/button_0"
        app:layout_constraintEnd_toStartOf="@+id/button_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_4"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button_2"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/button_2"
        android:textColor="@color/colorDayTextPlain"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/button_1"
        app:layout_constraintEnd_toStartOf="@+id/button_3"
        app:layout_constraintStart_toEndOf="@+id/button_1"
        app:layout_constraintTop_toTopOf="@+id/button_1"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button_3"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/button_3"
        android:textColor="@color/colorDayTextPlain"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/button_2"
        app:layout_constraintEnd_toStartOf="@+id/button_plus"
        app:layout_constraintStart_toEndOf="@+id/button_2"
        app:layout_constraintTop_toTopOf="@+id/button_2"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button_plus"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/button_plus"
        android:textColor="@color/colorDayTextPlain"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/button_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_3"
        app:layout_constraintTop_toTopOf="@+id/button_3"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button_4"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/button_4"
        android:textColor="@color/colorDayTextPlain"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@+id/button_1"
        app:layout_constraintEnd_toStartOf="@+id/button_5"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_7"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button_5"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/button_5"
        android:textColor="@color/colorDayTextPlain"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/button_4"
        app:layout_constraintEnd_toStartOf="@+id/button_6"
        app:layout_constraintStart_toEndOf="@+id/button_4"
        app:layout_constraintTop_toTopOf="@+id/button_4"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button_6"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/button_6"
        android:textColor="@color/colorDayTextPlain"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/button_5"
        app:layout_constraintEnd_toStartOf="@+id/button_minus"
        app:layout_constraintStart_toEndOf="@+id/button_5"
        app:layout_constraintTop_toTopOf="@+id/button_5"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button_minus"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/button_minus"
        android:textColor="@color/colorDayTextPlain"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/button_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_6"
        app:layout_constraintTop_toTopOf="@+id/button_6"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button_7"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/button_7"
        android:textColor="@color/colorDayTextPlain"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@+id/button_4"
        app:layout_constraintEnd_toStartOf="@+id/button_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_ac"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button_8"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/button_8"
        android:textColor="@color/colorDayTextPlain"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/button_7"
        app:layout_constraintEnd_toStartOf="@+id/button_9"
        app:layout_constraintStart_toEndOf="@+id/button_7"
        app:layout_constraintTop_toTopOf="@+id/button_7"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button_9"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/button_9"
        android:textColor="@color/colorDayTextPlain"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/button_8"
        app:layout_constraintEnd_toStartOf="@+id/button_multi"
        app:layout_constraintStart_toEndOf="@+id/button_8"
        app:layout_constraintTop_toTopOf="@+id/button_8"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button_multi"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/button_multi"
        android:textColor="@color/colorDayTextPlain"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/button_9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_9"
        app:layout_constraintTop_toTopOf="@+id/button_9"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button_ac"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/button_ac"
        android:textColor="@color/colorDayTextPlain"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@+id/button_7"
        app:layout_constraintEnd_toEndOf="@+id/button_7"
        app:layout_constraintStart_toStartOf="@+id/button_7"
        app:layout_constraintTop_toBottomOf="@id/enter_numbers"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button_del"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/button_del"
        android:textColor="@color/colorDayTextPlain"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/button_ac"
        app:layout_constraintEnd_toEndOf="@+id/button_8"
        app:layout_constraintStart_toStartOf="@+id/button_8"
        app:layout_constraintTop_toTopOf="@+id/button_ac"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button_percent"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/button_percent"
        android:textColor="@color/colorDayTextPlain"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/button_del"
        app:layout_constraintEnd_toEndOf="@+id/button_9"
        app:layout_constraintStart_toStartOf="@+id/button_9"
        app:layout_constraintTop_toTopOf="@+id/button_del"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button_div"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/button_div"
        android:textColor="@color/colorDayTextPlain"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/button_percent"
        app:layout_constraintEnd_toEndOf="@+id/button_multi"
        app:layout_constraintStart_toStartOf="@+id/button_multi"
        app:layout_constraintTop_toTopOf="@+id/button_percent"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>